# laba_6

./: CMakeLists.txt  main.cpp  rhombus.cpp  rhombus.h
